--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "豆瓣影评推荐",
+    "navigationBarTitleText": "影荐天天见",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
