--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 		"nodeModules": true
 	},
 	"appid": "wx5495ed6ca01a694a",
-	"projectname": "wx04",
+	"projectname": "doubanmoviecomment",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
